welcome.lessons.welcome.array.has271.Has271.scala.error
has271:2: error: Invalid literal number
	for(i<-0to nums.length-3){
               ^has271:8: error: ')' expected but '}' found.
}
^